[tool.poetry]
name = "opentool-ai"
version = "0.1.7"
description = "A protocol for AI agent tools"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "opentool"}]

[tool.poetry.dependencies]
python = "^3.10"
docstring-parser = "^0.15"
urllib3 = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"
flake8 = "^7.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry.scripts]
build-docs = "scripts.build_docs:main"
lint = "scripts.lint:main"
