[tool.poetry]
name = "toolfuse"
version = "0.1.25"
description = "Tools for AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "toolfuse"}]

[tool.poetry.dependencies]
python = "^3.10"
docstring-parser = "^0.15"
urllib3 = "^1.26.0"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
toolcore = "^0.1.0"
jsonschema = "^4.22.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry.scripts]
build-docs = "scripts.build_docs:main"
lint = "scripts.lint:main"
